# sam2-yolov8-ros2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/interfaces_pkg/share/interfaces_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interfaces_pkg/share/interfaces_pkg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_interfaces_pkg__rosidl_generator_cppExport.cmake  export_interfaces_pkg__rosidl_typesupport_fastrtps_cExport.cmake  export_interfaces_pkg__rosidl_typesupport_fastrtps_cppExport.cmake  interfaces_pkgConfig-version.cmake  interfaces_pkgConfig.cmake  interfaces_pkg__rosidl_typesupport_cExport.cmake  interfaces_pkg__rosidl_typesupport_cppExport.cmake  interfaces_pkg__rosidl_typesupport_introspection_cExport.cmake  interfaces_pkg__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/obj_det/lib/obj_det/: obj_det_node
install/obj_det/share/obj_det/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/interfaces_pkg/: CMakeLists.txt  package.xml
src/interfaces_pkg/msg/: TrackingMask.msg  Yolov8Objects.msg
src/obj_det/: setup.py
src/obj_det/obj_det/: obj_det_node.py
(+119 files in other folders)
